--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "styled-components": "^6.1.1"
+    "react-uuid": "^2.0.0",
+    "styled-components": "^6.1.1",
+    "styled-reset": "^4.5.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
