--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
 
     - name: 🔨 Build Project 
       run: |
-        npm install
-        npm run build
+        yarn install
+        yarn run build
     
     - name: List output files
       run: find build/ -print
