--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - name: 🔨 Build Project 
       run: |
         yarn install
-        yarn run build
+        vite build
     
     - name: List output files
       run: find build/ -print
